--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -116,15 +116,18 @@ inactive-opacity-override = false;
 # Do not let dimness adjust based on window opacity.
 # inactive-dim-fixed = true;
 # Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
-# blur-background = true;
+blur-background = true;
 # Blur background of opaque windows with transparent frames as well.
-# blur-background-frame = true;
+blur-background-frame = true;
 # Do not let blur radius adjust based on window opacity.
-blur-background-fixed = false;
-blur-background-exclude = [
-    "window_type = 'dock'",
-    "window_type = 'desktop'"
-];
+blur-background-fixed = true;
+#blur-background-exclude = [
+#    "window_type = 'dock'",
+#    "window_type = 'desktop'"
+#];
+ 
+blur-method = "dual_kawase";
+blur-strength = 10;
 
 #################################
 #
@@ -216,6 +219,14 @@ wintypes:
         focus = true;
     };
 };
+
+opacity-rule = [
+  "85:class_g = 'Alacritty' && focused",
+  "80:class_g = 'Alacritty' && !focused",
+  "85:class_g = 'code-oss' && focused",
+  "80:class_g = 'code-oss' && !focused",
+];
+
 
 ######################
 #
