--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -2,7 +2,7 @@
 bg = #00
 gray = #585858
 black = #090909
-red = #fc618d
+red = #F7768E
 background-alt = #3306080a
 foreground-alt = #B8B69A
 icons = #FFFFFF
@@ -10,15 +10,34 @@ primary = #FFFFFF
 secondary = #e60053
 alert = #bd2c40
 
-[bar/main]
-;monitor = ${env:MONITOR:HDMI-1}
+[bar/top]
 bottom = false
-;width = 1800
-width = 100%
-height = 30
+monitor = eDP1
 
 background = ${colors.bg}
-# foreground = ${colors.fg}
+
+line-size = 3
+line-color = #f00
+
+border-size = 0
+border-color = #00000000
+
+padding-right = 2
+
+module-margin-left = 1
+module-margin-right = 1
+
+font-0 = FiraCode Nerd Font:pixelsize=10;1
+modules-left = bspwm xwindow
+modules-right = date wlan battery pulseaudio
+
+wm-restack = bspwm
+
+[bar/top_external]
+bottom = false
+monitor = HDMI1
+
+background = ${colors.bg}
 
 line-size = 3
 line-color = #f00
@@ -35,14 +54,46 @@ font-0 = FiraCode Nerd Font Mono:pixelsize=10;1
 font-1 = unifont:fontformat=truetype:size=9:antialias=false;0
 font-2 = P052:pixelsize=9;1
 
-modules-left = bspwm
-modules-right = date wlan battery alsa
-
-tray-position = right
-tray-padding = 2
-;tray-background = #0063ff
+modules-left = bspwm xwindow
+modules-right = date wlan pulseaudio
 
 wm-restack = bspwm
+
+;[bar/main]
+;monitor = ${env:MONITOR:HDMI-1}
+;bottom = false
+;width = 1800
+;width = 100%
+;height = 30
+
+;enable-ipc = true
+
+;background = ${colors.bg}
+# foreground = ${colors.fg}
+
+;line-size = 3
+;line-color = #f00
+
+;border-size = 0
+;border-color = #00000000
+
+;padding-right = 2
+
+;module-margin-left = 1
+;module-margin-right = 1
+
+;font-0 = FiraCode Nerd Font Mono:pixelsize=10;1
+;font-1 = unifont:fontformat=truetype:size=9:antialias=false;0
+;font-2 = P052:pixelsize=9;1
+
+;modules-left = bspwm xwindow
+;modules-right = date wlan battery alsa
+
+;tray-position = right
+;tray-padding = 2
+;tray-background = #0063ff
+
+;wm-restack = bspwm
 ;wm-restack = i3
 
 ;override-redirect = true
@@ -53,8 +104,8 @@ wm-restack = bspwm
 ;scroll-up = i3wm-wsnext
 ;scroll-down = i3wm-wsprev
 
-cursor-click = pointer
-cursor-scroll = ns-resize
+;cursor-click = pointer
+;cursor-scroll = ns-resize
 
 [module/xwindow]
 type = internal/xwindow
@@ -85,6 +136,7 @@ label-unmounted-foreground = ${colors.foreground-alt}
 
 [module/bspwm]
 type = internal/bspwm
+pin-workspaces = true
 
 label-focused = %index%
 label-focused-background = ${colors.background-alt}
@@ -194,69 +246,42 @@ label = %percentage_used%%
 
 [module/wlan]
 type = internal/network
-interface = wlo1
+interface = wlan0
 interval = 3.0
 
-format-connected = <ramp-signal> <label-connected>
+format-connected = 直 <label-connected>
 label-connected = %essid%
 
 format-disconnected = <label-disconnected>
-label-disconnected = %essid%
-
-;format-disconnected = <label-disconnected>
-;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
-
-ramp-signal-0 = 直
-ramp-signal-1 = 直
-ramp-signal-2 = 直
-ramp-signal-3 = 直
-ramp-signal-4 = 直
-ramp-signal-foreground = ${colors.icons}
+label-disconnected = 睊
 
 [module/date]
 type = internal/date
 interval = 5
 
 date = "%a %b %d"
-date-alt = " %Y-%m-%d"
-
 time = %H:%M
-time-alt = %H:%M:%S
 
-format-prefix = 
-format-prefix-foreground = ${colors.icons}
-
+format =  <label>
 label = %time% %date%
 
 [module/battery]
 type = internal/battery
 battery = BAT0
-adapter = AC0
+adapter = ADP1
 full-at = 98
 
-format-charging = <animation-charging> <label-charging>
-
+format-charging =  <label-charging>
 format-discharging = <ramp-capacity> <label-discharging>
+format-full =  <label-full>
 
-format-full-prefix = " "
-format-full-prefix-foreground = ${colors.icons}
-
-
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-ramp-capacity-foreground = ${colors.icons}
-
-animation-charging-0 = 
-animation-charging-foreground = ${colors.icons}
-animation-charging-framerate = 750
-
-animation-discharging-0 = 
-animation-discharging-foreground = ${colors.icons}
-animation-discharging-framerate = 750
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+ramp-capacity-0-foreground = ${colors.red}
+ramp-capacity-1-foreground = ${colors.icons}
 
 [module/temperature]
 type = internal/temperature
@@ -287,61 +312,20 @@ screenchange-reload = true
 margin-top = 5
 margin-bottom = 5
 
-[module/alsa]
-type = internal/alsa
+[module/pulseaudio]
+type = internal/pulseaudio
 
-; Soundcard to be used
-; Usually in the format hw:# where # is the card number
-; You can find the different card numbers in `/proc/asound/cards`
-master-soundcard = default
-speaker-soundcard = default
-headphone-soundcard = default
+sink = alsa_output.pci-0000_00_1f.3.analog-stereo
 
-; Name of the master, speaker and headphone mixers
-; Use the following command to list available mixer controls:
-; $ amixer scontrols | sed -nr "s/.*'([[:alnum:]]+)'.*/\1/p"
-; If master, speaker or headphone-soundcard isn't the default, 
-; use `amixer -c # scontrols` instead where # is the number 
-; of the master, speaker or headphone soundcard respectively
-;
-; Default: Master
-master-mixer = Master
+use-ui-max = true
 
-; Optionally define speaker and headphone mixers
-; Default: none
-speaker-mixer = Speaker
-; Default: none
-headphone-mixer = Headphone
-
-; NOTE: This is required if headphone_mixer is defined
-; Use the following command to list available device controls
-; $ amixer controls | sed -r "/CARD/\!d; s/.*=([0-9]+).*name='([^']+)'.*/printf '%3.0f: %s\n' '\1' '\2'/e" | sort
-; You may also need to use `amixer -c # controls` as above for the mixer names
-; Default: none
-headphone-id = 9
-
-; Use volume mapping (similar to amixer -M and alsamixer), where the increase in volume is linear to the ear
-; Default: false
-mapped = true
-
-; Interval for volume increase/decrease (in percent points)
-; Default: 5
 interval = 5
 
 format-volume = <ramp-volume> <label-volume>
 
-label-volume = %percentage%%
-
-format-muted = <label-muted>
-
-label-muted = ﱝ muted
+label-muted = ﱝ
 label-muted-foreground = #666
 
-; Only applies if <ramp-volume> is used
 ramp-volume-0 = 奄
 ramp-volume-1 = 奔
 ramp-volume-2 = 墳
-ramp-volume-foreground = ${colors.icons}
-
-; Inter-process messaging
-enable-ipc = true
