--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -1,23 +1,14 @@
 [colors]
-bg = #00
-gray = #585858
-black = #090909
-red = #F7768E
+background = #00
 background-alt = #3306080a
-foreground-alt = #B8B69A
-icons = #FFFFFF
-primary = #FFFFFF
-secondary = #e60053
-alert = #bd2c40
+primary = #fff
+alert = #f7768e
 
 [bar/top]
 bottom = false
 monitor = eDP1
 
-background = ${colors.bg}
-
-line-size = 3
-line-color = #f00
+background = ${colors.background}
 
 border-size = 0
 border-color = #00000000
@@ -27,7 +18,8 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 1
 
-font-0 = FiraCode Nerd Font:pixelsize=10;1
+font-0 = FiraCode Nerd Font:size=10;1
+
 modules-left = bspwm xwindow
 modules-right = date wlan battery pulseaudio
 
@@ -37,10 +29,7 @@ wm-restack = bspwm
 bottom = false
 monitor = HDMI1
 
-background = ${colors.bg}
-
-line-size = 3
-line-color = #f00
+background = ${colors.background}
 
 border-size = 0
 border-color = #00000000
@@ -51,88 +40,15 @@ module-margin-left = 1
 module-margin-right = 1
 
 font-0 = FiraCode Nerd Font Mono:pixelsize=10;1
-font-1 = unifont:fontformat=truetype:size=9:antialias=false;0
-font-2 = P052:pixelsize=9;1
 
 modules-left = bspwm xwindow
 modules-right = date wlan pulseaudio
 
 wm-restack = bspwm
 
-;[bar/main]
-;monitor = ${env:MONITOR:HDMI-1}
-;bottom = false
-;width = 1800
-;width = 100%
-;height = 30
-
-;enable-ipc = true
-
-;background = ${colors.bg}
-# foreground = ${colors.fg}
-
-;line-size = 3
-;line-color = #f00
-
-;border-size = 0
-;border-color = #00000000
-
-;padding-right = 2
-
-;module-margin-left = 1
-;module-margin-right = 1
-
-;font-0 = FiraCode Nerd Font Mono:pixelsize=10;1
-;font-1 = unifont:fontformat=truetype:size=9:antialias=false;0
-;font-2 = P052:pixelsize=9;1
-
-;modules-left = bspwm xwindow
-;modules-right = date wlan battery alsa
-
-;tray-position = right
-;tray-padding = 2
-;tray-background = #0063ff
-
-;wm-restack = bspwm
-;wm-restack = i3
-
-;override-redirect = true
-
-;scroll-up = bspwm-desknext
-;scroll-down = bspwm-deskprev
-
-;scroll-up = i3wm-wsnext
-;scroll-down = i3wm-wsprev
-
-;cursor-click = pointer
-;cursor-scroll = ns-resize
-
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:30:...%
-
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
-
-format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-
-label-layout = %layout%
-
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-background = ${colors.secondary}
-
-[module/filesystem]
-type = internal/fs
-interval = 25
-
-mount-0 = /
-
-label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.foreground-alt}
 
 [module/bspwm]
 type = internal/bspwm
@@ -150,110 +66,16 @@ label-urgent-background = ${colors.alert}
 label-urgent-padding = 2
 
 label-empty = 
-label-empty-foreground = ${colors.foreground-alt}
-label-empty-padding = 2
-
-; Separator in between workspaces
-; label-separator = |
-
-[module/i3]
-type = internal/i3
-format = <label-mode> <label-state>
-index-sort = true
-
-label-focused-font = 4
-label-unfocused-font = 4
-label-urgent-font = 4
-label-visible-font = 4
-
-label-focused = 
-;label-focused = %index%
-;label-focused-background = ${colors.gray}
-label-focused-padding = 1
-label-focused-foreground = ${colors.icons}
-
-label-unfocused = 
-;label-unfocused = %index%
-label-unfocused-padding = 1
-;label-unfocused-background = ${colors.black}
-label-unfocused-underlinde = ${colors.white}
-
-label-urgent = 
-;label-urgent = %index%!
-;label-urgent-background = ${colors.red}
-label-urgent-padding = 1
-label-urgent-foreground = ${colors.red}
-
-label-visible = 
-;label-visible = %index%
-label-visible-foreground = ${colors.white}
-label-visible-padding = 1
-
-[module/mpd]
-type = internal/mpd
-format-online = <label-song>  <icon-prev> <icon-stop> <toggle> <icon-next>
-
-icon-prev = 
-icon-stop = 
-icon-play = 
-icon-pause = 
-icon-next = 
-
-label-song-maxlen = 25
-label-song-ellipsis = true
-
-[module/backlight]
-type = internal/backlight
-card = intel_backlight
-enable-scroll = true
-
-[module/xbacklight]
-type = internal/xbacklight
-card = intel_backlight
-
-format = <label> <bar>
-label = BL
-
-bar-width = 10
-bar-indicator = |
-bar-indicator-foreground = #fff
-bar-indicator-font = 2
-bar-fill = ─
-bar-fill-font = 2
-bar-fill-foreground = #9f78e1
-bar-empty = ─
-bar-empty-font = 2
-bar-empty-foreground = ${colors.foreground-alt}
-
-[module/backlighaacpi]
-inherit = module/xbacklight
-type = internal/backlight
-card = intel_backlight
-
-[module/cpu]
-type = internal/cpu
-interval = 2
-format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-label = %percentage:2%%
-
-[module/memory]
-type = internal/memory
-interval = 2
-format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-label = %percentage_used%%
 
 [module/wlan]
 type = internal/network
 interface = wlan0
 interval = 3.0
 
-format-connected = 直 <label-connected>
+format-connected = %{A1:networkmanager_dmenu:}直 <label-connected>%{A}
 label-connected = %essid%
 
-format-disconnected = <label-disconnected>
-label-disconnected = 睊
+format-disconnected = %{A1:networkmanager_dmenu:}睊%{A}
 
 [module/date]
 type = internal/date
@@ -280,33 +102,8 @@ ramp-capacity-1 = 
 ramp-capacity-2 = 
 ramp-capacity-3 = 
 ramp-capacity-4 = 
-ramp-capacity-0-foreground = ${colors.red}
-ramp-capacity-1-foreground = ${colors.icons}
-
-[module/temperature]
-type = internal/temperature
-thermal-zone = 0
-warn-temperature = 60
-
-format = <ramp> <label>
-format-warn = <ramp> <label-warn>
-
-label = %temperature-c%
-label-warn = %temperature-c%
-label-warn-foreground = ${colors.secondary}
-
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-foreground = ${colors.foreground-alt}
-
-[settings]
-screenchange-reload = true
-;compositing-background = xor
-;compositing-background = screen
-;compositing-foreground = source
-;compositing-border = over
-;pseudo-transparency = false
+ramp-capacity-0-foreground = ${colors.alert}
+ramp-capacity-1-foreground = ${colors.primary}
 
 [global/wm]
 margin-top = 5
@@ -329,3 +126,5 @@ label-muted-foreground = #666
 ramp-volume-0 = 奄
 ramp-volume-1 = 奔
 ramp-volume-2 = 墳
+
+; vim:ft=dosini
