Add rofi power menu script

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -139,7 +139,7 @@ click-right = pavucontrol&
 [module/session]
 type = custom/text
 
-click-left = rofi-power-menu
+click-left = powermenu
 content = %{T4}%{T-}
 content-background = ${colors.shade-2}
 content-foreground = ${colors.shade-5}
