Add rofi wifi menu script

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -46,7 +46,6 @@ modules-center = bspwm
 modules-right = wlan pulseaudio battery margin session
 
 cursor-click = pointer
-cursor-scroll = ns-resize
 
 [bar/external]
 monitor = HDMI1
@@ -130,7 +129,7 @@ format-muted = <label-muted>
 format-muted-padding = 1
 format-muted-prefix = 
 format-muted-prefix-foreground = ${colors.fg-alt}
-label-muted = %percentage%
+label-muted = %{T1}%percentage%%%{T-}
 label-muted-foreground = ${colors.fg-alt}
 label-muted-padding = 1
 
@@ -152,13 +151,12 @@ interval = 1.0
 
 format-connected = <label-connected>
 format-connected-padding = 1
-label-connected =  %essid%
+label-connected = %{A1:wifimenu:} %essid%%{A}
 label-connected-foreground = ${colors.fg}
 label-connected-padding = 1
 
 format-disconnected = <label-disconnected>
 format-disconnected-padding = 1
-label-disconnected = 
+label-disconnected = %{A1:wifimenu:}%{A}
 label-disconnected-foreground = ${colors.shade-1}
 label-disconnected-padding = 1
-
