Update low battery format in polybar

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -34,8 +34,8 @@ enable-ipc = true
 background = ${colors.bg}
 foreground = ${colors.fg}
 
-font-0 = "JetBrains Mono Nerd Font:style=Medium:size=10;2"
-font-1 = "JetBrains Mono Nerd Font:style=Bold:size=10;2"
+font-0 = "JetBrainsMono Nerd Font:style=Regular:size=10;2"
+font-1 = "JetBrainsMono Nerd Font:style=Bold:size=10;2"
 font-2 = "JetBrainsMono Nerd Font:size=19;5"
 font-3 = "Material Icons Outlined:9;4"
 font-4 = "Material Icons Round:9;4"
@@ -44,6 +44,8 @@ font-5 = "Source Han Sans CN:size=9;2"
 modules-left = date
 modules-center = bspwm
 modules-right = wlan pulseaudio battery margin session
+
+tray-position = right
 
 cursor-click = pointer
 
@@ -55,27 +57,37 @@ inherit = bar/main
 [settings]
 screenchange-reload = true
 
+[module/nowplaying]
+type = custom/script
+tail = true
+interval = 1
+format =  <label>
+exec = playerctl metadata --format "{{ artist }} - {{ title }}"
+
 [module/battery]
 type = internal/battery
 battery = BAT0
 adapter = ADP1
 full-at = 98
+low-at = 25
 format-charging =  <label-charging>
 label-charging = %percentage:2%%
 format-charging-padding = 1
-format-charging-foreground = ${colors.foreground}
+format-charging-foreground = ${colors.fg}
 format-discharging = <ramp-capacity> <label-discharging>
 label-discharging = %percentage%%
-format-discharging-foreground = ${colors.foreground}
-format-full-prefix = "  "
-ramp-capacity-0 = " "
-ramp-capacity-1 = " "
-ramp-capacity-2 = " "
-ramp-capacity-3 = " "
-ramp-capacity-4 = " "
-ramp-capacity-0-foreground = ${colors.red}
-animation-charging-framerate = 910
 format-discharging-padding = 1
+format-discharging-foreground = ${colors.fg}
+format-low = <ramp-capacity> <label-discharging>
+format-low-padding = 1
+format-low-foreground = ${colors.red}
+ramp-capacity-0 = ""
+ramp-capacity-1 = ""
+ramp-capacity-2 = ""
+ramp-capacity-3 = ""
+ramp-capacity-4 = ""
+ramp-capacity-6 = ""
+poll-interval = 5
 
 [module/bspwm]
 type = internal/bspwm
