Add polybar modules

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -43,7 +43,7 @@ font-5 = "Source Han Sans CN:size=9;2"
 
 modules-left = date
 modules-center = bspwm
-modules-right = wlan pulseaudio battery margin session
+modules-right = updates filesystem wlan pulseaudio battery session
 
 tray-position = right
 
@@ -56,6 +56,7 @@ inherit = bar/main
 
 [settings]
 screenchange-reload = true
+format-padding = 1
 
 [module/nowplaying]
 type = custom/script
@@ -70,17 +71,19 @@ battery = BAT0
 adapter = ADP1
 full-at = 98
 low-at = 25
-format-full =  <label-charging>
-format-charging =  <label-charging>
+format-full-prefix =  
+format-full = <label-charging>
+format-charging-prefix =  
+format-charging = <label-charging>
 label-charging = %percentage:2%%
-format-charging-padding = 1
+label-charging-padding = 1
 format-charging-foreground = ${colors.fg}
 format-discharging = <ramp-capacity> <label-discharging>
 label-discharging = %percentage%%
-format-discharging-padding = 1
+label-discharging-padding = 1
 format-discharging-foreground = ${colors.fg}
-format-low = <ramp-capacity> <label-discharging>
-format-low-padding = 1
+format-low = <ramp-capacity><label-discharging>
+label-low-padding = 1
 format-low-foreground = ${colors.red}
 ramp-capacity-0 = ""
 ramp-capacity-1 = ""
@@ -103,6 +106,10 @@ label-occupied = %index%
 label-occupied-foreground = ${colors.shade-3}
 label-occupied-padding = 2
 
+label-urgent = %index%
+label-urgent-foreground = ${colors.red}
+label-urgent-padding = 2
+
 label-empty = %index%
 label-empty-foreground = ${colors.shade-1}
 label-empty-padding = 2
@@ -120,18 +127,11 @@ format-prefix = %{T5}%{T-}
 label = %{T1}%time%%{T-}
 label-padding = 1
 
-[module/margin]
-type = custom/text
-
-content = %{T2}%{T-}
-content-foreground = ${colors.trans}
-
 [module/pulseaudio]
 type = internal/pulseaudio
 use-ui-max = false
 
 format-volume = <label-volume>
-format-volume-padding = 1
 format-volume-prefix = %{T4}%{T-}
 format-volume-prefix-foreground = ${colors.fg}
 label-volume = %{T1}%percentage%%%{T-}
@@ -139,7 +139,6 @@ label-volume-foreground = ${colors.fg}
 label-volume-padding = 1
 
 format-muted = <label-muted>
-format-muted-padding = 1
 format-muted-prefix = 
 format-muted-prefix-foreground = ${colors.fg-alt}
 label-muted = %{T1}%percentage%%%{T-}
@@ -162,9 +161,9 @@ type = internal/network
 interface = wlan0
 interval = 1.0
 
+format-connected-prefix = 
 format-connected = <label-connected>
-format-connected-padding = 1
-label-connected = %{A1:wifimenu:} %essid%%{A}
+label-connected = "%{A1:wifimenu:}%essid%%{A}"
 label-connected-foreground = ${colors.fg}
 label-connected-padding = 1
 
@@ -173,3 +172,30 @@ format-disconnected-padding = 1
 label-disconnected = %{A1:wifimenu:}%{A}
 label-disconnected-foreground = ${colors.shade-1}
 label-disconnected-padding = 1
+
+[module/updates]
+type = custom/script
+exec = ~/.local/bin/polybar/updates-pacman-aurhelper
+interval = 600
+
+format = <label>
+format-prefix = 
+label = %output%
+label-padding = 1
+
+[module/filesystem]
+type = internal/fs
+
+mount-0 = /
+interval = 30
+warn-percentage = 90
+
+format-mounted-prefix = 
+label-mounted = %free%
+label-mounted-padding = 1
+
+format-warn-prefix = 
+format-warn = <label-warn>
+label-warn = %free%
+label-warn-padding = 1
+format-warn-foreground = ${colors.red}
