--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -24,3 +24,10 @@ audio_output {
 	type "pulse"
 	name "pulse audio"
 }
+
+audio_output {
+    type                    "fifo"
+    name                    "my_fifo"
+    path                    "/tmp/mpd.fifo"
+    format                  "44100:16:2"
+}
