Change low battery percentage in polybar

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -70,15 +70,15 @@ type = internal/battery
 battery = BAT0
 adapter = ADP1
 full-at = 98
-low-at = 25
-format-full-prefix =  
+low-at = 30
+format-full-prefix = 
 format-full = <label-charging>
-format-charging-prefix =  
+format-charging-prefix = 
 format-charging = <label-charging>
 label-charging = %percentage:2%%
 label-charging-padding = 1
 format-charging-foreground = ${colors.fg}
-format-discharging = <ramp-capacity> <label-discharging>
+format-discharging = <ramp-capacity><label-discharging>
 label-discharging = %percentage%%
 label-discharging-padding = 1
 format-discharging-foreground = ${colors.fg}
@@ -179,7 +179,7 @@ exec = ~/.local/bin/polybar/updates-pacman-aurhelper
 interval = 600
 
 format = <label>
-format-prefix = 
+format-prefix = 
 label = %output%
 label-padding = 1
 
