--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,6 +1,7 @@
 backend = "glx";
 glx-no-stencil = true;
 glx-copy-from-front = false;
+glx-swap-method = 2;
 
 # Opacity
 active-opacity = 1;
@@ -24,7 +25,6 @@ mark-wmwin-focused = true;
 mark-ovredir-focused = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
-refresh-rate = 0;
 vsync = true;
 dbe = false;
 unredir-if-possible = false;
@@ -42,8 +42,8 @@ wintypes:
 
 opacity-rule = [
     "80:class_g = 'Rofi'",
-    "95:class_g = 'Alacritty' && focused",
-    "85:class_g = 'Alacritty' && !focused"
+    "90:class_g = 'Alacritty' && focused",
+    "80:class_g = 'Alacritty' && !focused"
 ];
 
 xrender-sync-fence = true;
