Change color scheme to catppuccin

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,19 +1,37 @@
 [colors]
-bg = #16161e
-bg-alt = #20212C
-fg = #acb0d0
-fg-alt = #5D5E72
+base = #1e1e2e
+mantle = #181825
+crust = #11111b
 
-red = #ff7a93
+text = #cdd6f4
+subtext0 = #a6adc8
+subtext1 = #bac2de
 
-trans = #00000000
-semi-trans-black = #cc000000
+surface0 = #313244
+surface1 = #45475a
+surface2 = #585b70
 
-shade-1 = #32344a
-shade-2 = #444b6a
-shade-3 = #787c99
-shade-4 = #CACACE
-shade-5 = #acb0d0
+overlay0 = #6c7086
+overlay1 = #7f849c
+overlay2 = #9399b2
+
+
+blue = #89b4fa
+lavender = #b4befe
+sapphire = #74c7ec
+sky = #89dceb
+teal = #94e2d5
+green = #a6e3a1
+yellow = #f9e2af
+peach = #fab387
+maroon = #eba0ac
+red = #f38ba8
+mauve = #cba6f7
+pink = #f5c2e7
+flamingo = #f2cdcd
+rosewater = #f5e0dc
+
+transparent = #FF00000
 
 [bar/main]
 width = 100%
@@ -31,8 +49,8 @@ scroll-down = prev
 
 enable-ipc = true
 
-background = ${colors.bg}
-foreground = ${colors.fg}
+background = ${colors.crust}
+foreground = ${colors.text}
 
 font-0 = "JetBrainsMono Nerd Font:style=Regular:size=10;2"
 font-1 = "JetBrainsMono Nerd Font:style=Bold:size=10;2"
@@ -73,15 +91,16 @@ full-at = 98
 low-at = 30
 format-full-prefix = 
 format-full = <label-charging>
+format-full-prefix-foreground = ${colors.sky}
 format-charging-prefix = 
 format-charging = <label-charging>
 label-charging = %percentage:2%%
 label-charging-padding = 1
-format-charging-foreground = ${colors.fg}
+format-charging-prefix-foreground = ${colors.sky}
 format-discharging = <ramp-capacity><label-discharging>
 label-discharging = %percentage%%
 label-discharging-padding = 1
-format-discharging-foreground = ${colors.fg}
+format-discharging-prefix-foreground = ${colors.sky}
 format-low = <ramp-capacity><label-discharging>
 label-low-padding = 1
 format-low-foreground = ${colors.red}
@@ -99,11 +118,11 @@ type = internal/bspwm
 format = <label-state> <label-mode>
 
 label-focused = %index%
-label-focused-foreground = ${colors.shade-5}
+label-focused-foreground = ${colors.text}
 label-focused-padding = 2
 
 label-occupied = %index%
-label-occupied-foreground = ${colors.shade-3}
+label-occupied-foreground = ${colors.overlay0}
 label-occupied-padding = 2
 
 label-urgent = %index%
@@ -111,7 +130,7 @@ label-urgent-foreground = ${colors.red}
 label-urgent-padding = 2
 
 label-empty = %index%
-label-empty-foreground = ${colors.shade-1}
+label-empty-foreground = ${colors.surface0}
 label-empty-padding = 2
 
 [module/date]
@@ -121,9 +140,9 @@ interval = 1
 time = "%a, %b %d %H:%M"
 
 format = <label>
-format-foreground = ${colors.fg}
 format-padding = 1
 format-prefix = %{T5}%{T-}
+format-prefix-foreground = ${colors.green}
 label = %{T1}%time%%{T-}
 label-padding = 1
 
@@ -133,16 +152,15 @@ use-ui-max = false
 
 format-volume = <label-volume>
 format-volume-prefix = %{T4}%{T-}
-format-volume-prefix-foreground = ${colors.fg}
+format-volume-prefix-foreground = ${colors.yellow}
 label-volume = %{T1}%percentage%%%{T-}
-label-volume-foreground = ${colors.fg}
 label-volume-padding = 1
 
 format-muted = <label-muted>
 format-muted-prefix = 
-format-muted-prefix-foreground = ${colors.fg-alt}
+format-muted-prefix-foreground = ${colors.overlay0}
 label-muted = %{T1}%percentage%%%{T-}
-label-muted-foreground = ${colors.fg-alt}
+label-muted-foreground = ${colors.overlay0}
 label-muted-padding = 1
 
 click-right = pavucontrol&
@@ -152,8 +170,8 @@ type = custom/text
 
 click-left = powermenu
 content = %{T4}%{T-}
-content-background = ${colors.shade-2}
-content-foreground = ${colors.shade-5}
+content-background = ${colors.surface1}
+content-foreground = ${colors.text}
 content-padding = 1
 
 [module/wlan]
@@ -162,15 +180,15 @@ interface = wlan0
 interval = 1.0
 
 format-connected-prefix = 
+format-connected-prefix-foreground = ${colors.blue}
 format-connected = <label-connected>
 label-connected = "%{A1:wifimenu:}%essid%%{A}"
-label-connected-foreground = ${colors.fg}
 label-connected-padding = 1
 
 format-disconnected = <label-disconnected>
 format-disconnected-padding = 1
 label-disconnected = %{A1:wifimenu:}%{A}
-label-disconnected-foreground = ${colors.shade-1}
+label-disconnected-foreground = ${colors.overlay0}
 label-disconnected-padding = 1
 
 [module/updates]
@@ -180,6 +198,7 @@ interval = 600
 
 format = <label>
 format-prefix = 
+format-prefix-foreground = ${colors.maroon}
 label = %output%
 label-padding = 1
 
@@ -191,6 +210,7 @@ interval = 30
 warn-percentage = 90
 
 format-mounted-prefix = 
+format-mounted-prefix-foreground = ${colors.mauve}
 label-mounted = %free%
 label-mounted-padding = 1
 
