--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -27,28 +27,8 @@ font:
   size: 7
 draw_bold_text_with_bright_colors: true
 
-colors:
-  primary:
-    background: "#11121D"
-    foreground: "#a9b1d6"
-  normal:
-    black: "#32344a"
-    red: "#f7768e"
-    green: "#9ece6a"
-    yellow: "#e0af68"
-    blue: "#7aa2f7"
-    magenta: "#ad8ee6"
-    cyan: "#449dab"
-    white: "#787c99"
-  bright:
-    black: "#444b6a"
-    red: "#ff7a93"
-    green: "#b9f27c"
-    yellow: "#ff9e64"
-    blue: "#7da6ff"
-    magenta: "#bb9af7"
-    cyan: "#0db9d7"
-    white: "#acb0d0"
+import:
+  - ~/.config/alacritty/catppuccin-mocha.yml
 
 selection:
   save_to_clipboard: false
