Fix polybar battery icon not being colored

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -100,16 +100,22 @@ format-charging-prefix-foreground = ${colors.sky}
 format-discharging = <ramp-capacity><label-discharging>
 label-discharging = %percentage%%
 label-discharging-padding = 1
-format-discharging-prefix-foreground = ${colors.sky}
-format-low = <ramp-capacity><label-discharging>
-label-low-padding = 1
-format-low-foreground = ${colors.red}
 ramp-capacity-0 = ""
+ramp-capacity-0-foreground = ${colors.red}
 ramp-capacity-1 = ""
+ramp-capacity-1-foreground = ${colors.sky}
 ramp-capacity-2 = ""
+ramp-capacity-2-foreground = ${colors.sky}
 ramp-capacity-3 = ""
+ramp-capacity-3-foreground = ${colors.sky}
 ramp-capacity-4 = ""
+ramp-capacity-4-foreground = ${colors.sky}
 ramp-capacity-5 = ""
+ramp-capacity-5-weight = 2
+ramp-capacity-5-foreground = ${colors.sky}
+format-low = <ramp-capacity><label-low>
+label-low-padding = 1
+label-low-foreground = ${colors.red}
 poll-interval = 5
 
 [module/bspwm]
