Add more binds to hyprland

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -47,8 +47,8 @@ general {
     gaps_in = 5
     gaps_out = 20
     border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = 0xffb4befe
+    col.inactive_border = 0xff45475a
 
     layout = dwindle
 }
@@ -112,16 +112,24 @@ device:epic-mouse-v1 {
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, killactive,
 bind = $mainMod, RETURN, exec, kitty
 bind = $mainMod, W, exec, firefox
 bind = $mainMod, SPACE, exec, wofi --show drun
 bind = $mainMod, M, exit, 
 bind = $mainMod, E, exec, dolphin
-bind = $mainMod, V, togglefloating, 
+bind = $mainMod, F, togglefloating, 
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+
+bind = , XF86MonBrightnessUp, exec, changebrightness up
+bind = , XF86MonBrightnessDown, exec, changebrightness down
+bind = , XF86AudioPrev, exec, playerctl prev
+bind = , XF86AudioNext, exec, playerctl next
+bind = , XF86AudioPlay, exec, playerctl play-pause
+bind = , XF86AudioRaiseVolume, exec, changevolume up
+bind = , XF86AudioLowerVolume, exec, changevolume down
+bind = , XF86AudioMute, exec, changevolume mute
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
