--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,7 +16,11 @@ monitor=eDP-1,1920x1080@60,0x0,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = /usr/lib/polkit-kde-authentication-agent-1 & hyprpaper & dunst
+exec-once = /usr/lib/polkit-kde-authentication-agent-1 &
+hyprpaper &
+waybar &
+dunst &
+gammastep
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -56,16 +60,15 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
+    active_opacity = 0.95
+    inactive_opacity = 0.9
+    fullscreen_opacity = 1
+
     rounding = 10
     blur = yes
-    blur_size = 3
-    blur_passes = 1
+    blur_size = 7
+    blur_passes = 2
     blur_new_optimizations = on
-
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
 }
 
 animations {
@@ -73,11 +76,11 @@ animations {
 
     bezier = md3_decel, 0.05, 0.7, 0.1, 1
     animation = windowsIn, 1, 6, md3_decel, slide
-    animation=windowsOut, 1,6,md3_decel,slide
-    animation=windowsMove, 1,6,md3_decel,slide
-    animation=fade, 1, 10, md3_decel
-    animation=workspaces, 1, 7, md3_decel,slide
-    animation=specialWorkspace, 1, 8, md3_decel, slide
+    animation = windowsOut, 1,6, md3_decel, slide
+    animation = windowsMove, 1,6, md3_decel, slide
+    animation = fade, 1, 10, md3_decel
+    animation = workspaces, 1, 7, md3_decel,slide
+    animation = specialWorkspace, 1, 8, md3_decel, slide
 }
 
 dwindle {
@@ -102,25 +105,26 @@ device:epic-mouse-v1 {
     sensitivity = -0.5
 }
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-
+binds {
+    allow_workspace_cycles = true
+}
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
 bind = $mainMod, Q, killactive,
-bind = $mainMod, RETURN, exec, kitty
+bind = $mainMod, RETURN, exec, $TERMINAL
 bind = $mainMod, W, exec, firefox
 bind = $mainMod, SPACE, exec, wofi --show drun
+bind = $mainMod, B, exec, $TERMINAL -e newsboat
+bind = $mainMod, E, exec, $TERMINAL -e lf
+bind = $mainMod, N, exec, $TERMINAL -e nvim ~/documents/vimwiki/index.md
+
+bind = $mainMod SHIFT, F, togglefloating, 
+bind = $mainMod, F, fullscreen, 
 bind = $mainMod, M, exit, 
-bind = $mainMod, E, exec, dolphin
-bind = $mainMod, F, togglefloating, 
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+
+bind = $mainMod, ESCAPE, exec, pkill waybar; waybar & disown
 
 bind = , XF86MonBrightnessUp, exec, changebrightness up
 bind = , XF86MonBrightnessDown, exec, changebrightness down
@@ -132,10 +136,10 @@ bind = , XF86AudioLowerVolume, exec, changevolume down
 bind = , XF86AudioMute, exec, changevolume mute
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, j, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -148,6 +152,9 @@ bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
+
+# Switch between most recent workspace
+bind = $mainMod, TAB, workspace, previous
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
