Make setwallpaper command in lf session agnostic

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,11 +16,7 @@ monitor=eDP-1,1920x1080@60,0x0,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = /usr/lib/polkit-kde-authentication-agent-1 &
-hyprpaper &
-waybar &
-dunst &
-gammastep
+exec-once = /usr/lib/polkit-kde-authentication-agent-1 & setwallpaper & waybar & dunst & gammastep
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -135,6 +131,10 @@ bind = , XF86AudioRaiseVolume, exec, changevolume up
 bind = , XF86AudioLowerVolume, exec, changevolume down
 bind = , XF86AudioMute, exec, changevolume mute
 
+# Screenshots
+bind = , Print, exec, screenshot-wayland
+bind = SHIFT, Print, exec, screenshot-wayland select
+
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
@@ -175,3 +175,5 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
