--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/eric/.config/wall.png
-wallpaper = eDP-1,/home/eric/.config/wall.png
+preload = /home/eric/.local/share/wall.jpg
+wallpaper = eDP-1,/home/eric/.local/share/wall.jpg
