Change waybar styles a bit

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -39,8 +39,7 @@
     "battery": {
         "states": {
             // "good": 95,
-            "warning": 30,
-            "critical": 20
+            "warning": 30
         },
         "format": "{icon} {capacity}%",
         "format-charging": " {capacity}%",
