Add latest wm changes

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,7 +16,7 @@ monitor=eDP-1,1920x1080@60,0x0,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = /usr/lib/polkit-kde-authentication-agent-1 & setwallpaper & waybar & dunst & gammastep
+exec-once = /usr/lib/polkit-kde-authentication-agent-1 & setwallpaper & waybar & dunst & gammastep & laptopidle
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -56,15 +56,16 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    active_opacity = 0.95
+    active_opacity = 1
     inactive_opacity = 0.9
     fullscreen_opacity = 1
 
     rounding = 10
-    blur = yes
-    blur_size = 7
-    blur_passes = 2
-    blur_new_optimizations = on
+    # blur = false
+    drop_shadow = false
+    # blur_size = 7
+    # blur_passes = 2
+    # blur_new_optimizations = on
 }
 
 animations {
@@ -101,6 +102,10 @@ device:epic-mouse-v1 {
     sensitivity = -0.5
 }
 
+misc {
+    vfr = true
+}
+
 binds {
     allow_workspace_cycles = true
 }
@@ -120,6 +125,7 @@ bind = $mainMod SHIFT, F, togglefloating,
 bind = $mainMod, F, fullscreen, 
 bind = $mainMod, M, exit, 
 
+bind = $mainMod, X, exec, lockscreen
 bind = $mainMod, ESCAPE, exec, pkill waybar; waybar & disown
 
 bind = , XF86MonBrightnessUp, exec, changebrightness up
