Switching back to rofi because I'm too lazy to style wofi

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -116,7 +116,7 @@ $mainMod = SUPER
 bind = $mainMod, Q, killactive,
 bind = $mainMod, RETURN, exec, $TERMINAL
 bind = $mainMod, W, exec, firefox
-bind = $mainMod, SPACE, exec, wofi --show drun
+bind = $mainMod, SPACE, exec, rofi -show drun
 bind = $mainMod, B, exec, $TERMINAL -e newsboat
 bind = $mainMod, E, exec, $TERMINAL -e lf
 bind = $mainMod, N, exec, $TERMINAL -e nvim ~/documents/vimwiki/index.md
