optimize dunst startup and config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,7 +16,8 @@ monitor=eDP-1,1920x1080@60,0x0,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = /usr/lib/polkit-kde-authentication-agent-1 & setwallpaper & waybar & dunst & gammastep & laptopidle
+exec-once = /usr/lib/polkit-kde-authentication-agent-1 & setwallpaper & waybar & gammastep & laptopidle
+exec-once = dunst -config <(envsubst < ~/.config/dunst/dunstrc)
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
