End Hypr-chan's existence

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -15,7 +15,7 @@ monitor=eDP-1,1920x1200@60,0x0,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = /usr/lib/polkit-kde-authentication-agent-1 & setwallpaper & waybar & dunst & gammastep & laptopidle
+exec-once = /usr/lib/polkit-kde-authentication-agent-1 & hyprpaper & waybar & dunst & gammastep & laptopidle
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -103,6 +103,7 @@ device:epic-mouse-v1 {
 
 misc {
     vfr = true
+		disable_hyprland_logo = true
 }
 
 binds {
@@ -113,12 +114,12 @@ binds {
 $mainMod = SUPER
 
 bind = $mainMod, Q, killactive,
-bind = $mainMod, RETURN, exec, $TERMINAL
+bind = $mainMod, RETURN, exec, kitty
 bind = $mainMod, W, exec, firefox
 bind = $mainMod, SPACE, exec, rofi -show drun
-bind = $mainMod, B, exec, $TERMINAL -e newsboat
-bind = $mainMod, E, exec, $TERMINAL -e lf
-bind = $mainMod, N, exec, $TERMINAL -e nvim ~/documents/vimwiki/index.md
+bind = $mainMod, B, exec, kitty -e newsboat
+bind = $mainMod, E, exec, kitty -e lf
+bind = $mainMod, N, exec, kitty -e nvim ~/documents/vimwiki/index.md
 
 bind = $mainMod SHIFT, F, togglefloating, 
 bind = $mainMod, F, fullscreen, 
@@ -182,3 +183,5 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+
+windowrule=tile,^(kitty)$
