Add padding to kitty

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -26,10 +26,7 @@ env = XCURSOR_SIZE,24
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
-    kb_variant =
-    kb_model =
     kb_options=caps:escape
-    kb_rules =
 
     follow_mouse = 1
 
@@ -103,7 +100,7 @@ device:epic-mouse-v1 {
 
 misc {
     vfr = true
-		disable_hyprland_logo = true
+    disable_hyprland_logo = true
 }
 
 binds {
@@ -114,25 +111,29 @@ binds {
 $mainMod = SUPER
 
 bind = $mainMod, Q, killactive,
-bind = $mainMod, RETURN, exec, kitty
-bind = $mainMod, W, exec, firefox
-bind = $mainMod, SPACE, exec, rofi -show drun
-bind = $mainMod, B, exec, kitty -e newsboat
-bind = $mainMod, E, exec, kitty -e lf
-bind = $mainMod, N, exec, kitty -e nvim ~/documents/vimwiki/index.md
+bind = $mainMod, RETURN, exec, $TERMINAL
+bind = $mainMod, W, exec, $BROWSER
+bind = $mainMod, SPACE, exec, fuzzel
+bind = $mainMod, B, exec, $TERMINAL -e newsboat
+bind = $mainMod, E, exec, $TERMINAL -e lf
+bind = $mainMod, N, exec, $TERMINAL -e nvim ~/documents/vimwiki/index.md
 
 bind = $mainMod SHIFT, F, togglefloating, 
 bind = $mainMod, F, fullscreen, 
 bind = $mainMod, M, exit, 
 
-bind = $mainMod, X, exec, lockscreen
 bind = $mainMod, ESCAPE, exec, pkill waybar; waybar & disown
 
+# My laptop doesn't have media keys lol, but if you want the media keys here they are:
+#bind = , XF86AudioPrev, exec, playerctl previous
+#bind = , XF86AudioNext, exec, playerctl next
+#bind = , XF86AudioPlay, exec, playerctl play-pause
+#
 bind = , XF86MonBrightnessUp, exec, changebrightness up
 bind = , XF86MonBrightnessDown, exec, changebrightness down
-bind = , XF86AudioPrev, exec, playerctl prev
-bind = , XF86AudioNext, exec, playerctl next
-bind = , XF86AudioPlay, exec, playerctl play-pause
+bind = , XF86Messenger, exec, playerctl previous
+bind = , XF86Go, exec, playerctl play-pause
+bind = , Cancel, exec, playerctl next
 bind = , XF86AudioRaiseVolume, exec, changevolume up
 bind = , XF86AudioLowerVolume, exec, changevolume down
 bind = , XF86AudioMute, exec, changevolume mute
